<resources>

    <string name="app_name">StackExchangeUsers</string>

    <!-- TITLE -->
    <string name="title_landing">Welcome!</string>
    <string name="title_user_list">User List</string>
    <string name="title_user">User</string>

    <!-- TEXT -->
    <string name="landing_message">This is a demo app which uses StackExchange API - https://api.stackexchange.com/docs. \n\n
It has two flows, personal and required. The personal approach uses paging 3 library to load a paginated list of users. The required approach uses RxJava2 to load the first 20 users (don\'t have pagination handling).\n
Both flows navigate to user details, the personal flow follows a single activity approach but required flow opens user details in the new activity. </string>

    <!-- LABELS -->
    <string name="user_name">User Name:</string>
    <string name="reputation">Reputation:</string>
    <string name="badges">Badges:</string>
    <string name="location">Location:</string>
    <string name="age">Age:</string>
    <string name="creation_date">Creation Date:</string>

    <!-- BUTTONS -->
    <string name="btn_personal">Personal Approach</string>
    <string name="btn_required">Required Approach</string>
    <string name="btn_search">Search</string>
    <string name="btn_retry">Retry</string>

    <!-- HINT -->
    <string name="hint_search">Search by name…</string>

    <!-- ERRORS -->
    <string name="error_access_denies">Access denied</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="error_service_unavailable">Service unavailable</string>
    <string name="error_invalid_host">Unable to connect host</string>

</resources>