<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".landing.LandingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:ellipsize="end"
            android:text="@string/landing_message"
            android:textAlignment="center"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_personal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@tools:sample/lorem/random" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_personal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:text="@string/btn_personal"
            app:layout_constraintBottom_toTopOf="@+id/btn_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_required"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_16"
            android:text="@string/btn_required"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_personal"
            app:layout_goneMarginTop="@dimen/space_16" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>