<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/landingFragment">

    <fragment
        android:id="@+id/landingFragment"
        android:name="com.exail.stackexchangeusers.landing.LandingFragment"
        android:label="@string/title_landing"
        tools:layout="@layout/fragment_landing">
        <action
            android:id="@+id/action_landing_to_personal"
            app:destination="@id/personalUserListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/landingFragment" />
        <action
            android:id="@+id/action_landing_to_required"
            app:destination="@id/requiredUserListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/landingFragment" />
    </fragment>
    <fragment
        android:id="@+id/personalUserListFragment"
        android:name="com.exail.stackexchangeusers.personal.PersonalUserListFragment"
        android:label="@string/title_user_list"
        tools:layout="@layout/fragment_personal_user_list" >
        <action
            android:id="@+id/action_user_list_to_details"
            app:destination="@id/userDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/personalUserListFragment" />
    </fragment>
    <fragment
        android:id="@+id/requiredUserListFragment"
        android:name="com.exail.stackexchangeusers.required.RequiredUserListFragment"
        android:label="@string/title_user_list"
        tools:layout="@layout/fragment_required_user_list" />
    <fragment
        android:id="@+id/userDetailsFragment"
        android:name="com.exail.stackexchangeusers.user.UserDetailsFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user_details" />

</navigation>